--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <section class="home" id="home">
                 <div class="home__container bd-grid">
                     <div class="home__data">
-                    <h1 class="home__title1">Hi,</h1>
+                    <h1 class="home__title1">Hello,</h1>
                     <!--===== <img src="https://img.icons8.com/fluent-systems-filled/50/ffffff/so-so.png"/> ====-->
-                    <h1 class="home__title2">I'am Rahmad</h1>
+                    <h1 class="home__title2">I'm Rahmad</h1>
                     <h1 class="home__title3">Creative Designer</h1>
 
                     <!--===== <a href="https://api.whatsapp.com/send?phone=+6287792100530" class="button__home">Contact</a>
@@ -210,7 +210,7 @@
                         </div>
 
                         <div>
-                            <a href="https://api.whatsapp.com/send?phone=+6285361079348" class="button project__button">Hire me</a>
+                            <a href="https://api.whatsapp.com/send/?phone=6287792100530&text&type=phone_number&app_absent=0" class="button project__button">Hire me</a>
                         </div>    
                     </div>   
                 </div>
@@ -359,6 +359,28 @@
                         <img src="assets/img/mopos9.jpg" alt="">
                         </a> 
                     </div>
+                    </div>
+
+                    <div class="portfolio__content max uiux">
+                    <div class="portfolio__img">
+                        <a href="https://gumroad.com/l/qgdxl">
+                        <img src="assets/img/ui1.jpg" alt="">
+                        </a>
+                    </div>
+                    </div>
+                    <div class="portfolio__content max uiux">
+                    <div class="portfolio__img">
+                        <a href="https://gumroad.com/l/mqtyf">
+                        <img src="assets/img/ui2.jpg" alt="">
+                        </a>
+                    </div>
+                    </div>
+                    <div class="portfolio__content max uiux">
+                    <div class="portfolio__img">
+                        <a href="https://gumroad.com/l/xeiiu">
+                        <img src="assets/img/ui3.jpg" alt="">
+                        </a>
+                    </div>
                     </div>      
                     <!--
                     <div class="portfolio__content max mograph">
@@ -426,6 +448,7 @@
                         </a> 
                     </div>
                     </div>
+
                     <div class="portfolio__content max degraph">
                     <div class="portfolio__img">
                         <a href="https://gumroad.com/l/kzMlE">
@@ -509,6 +532,8 @@
                         </a>
                     </div>
                     </div>
+
+
                     <div class="portfolio__content max degraph">
                     <div class="portfolio__img">
                         <a href="https://gumroad.com/l/qZOrl">
